--- a/res/mainstyle.css
+++ b/res/mainstyle.css
@@ -35,6 +35,14 @@
   color: rgb(255, 0, 0);
 }
 
+.tab_selector .tab_selector_clearCache {
+  float: right;
+  background-color: rgb(8, 221, 61);
+  color: rgb(0, 4, 255);
+  font-weight: bolder;
+  cursor: pointer;
+}
+
 .div_view .main_viewer {
   margin-top: 15px;
 }
